[package]
name = "mhf-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23"
mhf-iel = { git = "https://github.com/rockisch/mhf-iel.git", rev = "9c0181f7c5fa24219ab5a9040cd079ecdbc1cb4a" }
ureq = { version = "2.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
